--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "live-serve": "live-server ./dist --port=8081",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "lib-flexible": "^0.3.2",
+    "postcss-px2rem-exclude": "^0.0.6",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
@@ -19,5 +22,14 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.11"
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {},
+      "postcss-px2rem-exclude": {
+        "remUnit": 37.5,
+        "exclude": "/node_modules|floder_name/i"
+      }
+    }
   }
 }
